      of percent capacity
#1140 Money is type squelchable through the squelch menu (= s o)
#1140 Add direction/distance to the visible item list ']'
r1971 Make summoning traps light blue
r1981 Coloured messages
r1999 Make ATTR_MULTI use the full range of colours
r2003 Add ATTR_FLICKER to make monsters shimmer in real time (optional!)

List of bugs fixed
==================
#1058 Fix energy problems on game loading
#1075 Make -r option work properly again
#1106 The psychic warriors bug (mana displayed for warriors)
#1122 Fix a display bug with the number of dropped items in the home
#1123 Fix an update bug with the monster list subwindow
#1129 Fix shooting power display in stores
#1130 Prevent the casting of forgotten spells 
#1131 Fix squelch worthless so non-salable items are squelched, salable items
      are not squelched, and the object knowledge menu indicates worthless
      items which are squelched by the option with Yes*
#1133 Do not mark object flavors {tried} on device activation failure
#1138 Fix the cost and nutrition on Potions of *Healing*
#1140 Allow selling of Potions of Dragon Breath
#1140 Do not display pvals for known flavors before use/ID
#1142 Fix 100% CPU problem with x11 mode
#1143 Fix darkness effect 
#1144 Fix timed effect increase messages
#1154 Fix an issue with the message for addtional str/dex to get extra blows
#1167 Fix preserve off mode
#1170 Ensure history captures all clev gains
#1177 Fix duplication of slay info when inspecting weapons
r1943 Potions of life should repair CON before hp
r1972 Fix bug when running with 100% searching
r1983 Fix divide-by-zero crash on device activation
r1996 Make remove curse affect items in the quiver

Coding changes
==============
#1102 Major bitflag rewrite
r2005 Allow wizmode tweaking to specify artifact or ego type (name1/name2)

Documentation changes
=====================
r1973 Remove obsolete references to class restrictions
